# Sensory-Tracer-Science-STS-Proposal-for-a-New-Subfield

./: .gitignore  .pre-commit-config.yaml  AUGMENTED_VALIDATION_FIXES_COMPLETE.md  BIOCOMPATIBLE_TRACER_FIXES_COMPLETE.md  CITATION.cff  COMPREHENSIVE_QUALITY_AUDIT_FINAL.md  COMPREHENSIVE_SCIENTIFIC_VALIDATION_REPORT.md  COMPREHENSIVE_TESTING_VALIDATION_REPORT.md  CONTRIBUTING.md  CREATE_PULL_REQUEST_INSTRUCTIONS.md  FINAL_PR_SUMMARY.md  FLESCH_100_TOOLS_README.md  GITHUB_PULL_REQUESTS_READY.md  LICENSE  Makefile  PR_COVERAGE_BREAKTHROUGH_DESCRIPTION.md  PR_DESCRIPTION_FINAL.md  PR_FINAL_COVERAGE_BREAKTHROUGH.md  PULL_REQUEST_TEMPLATE.md  README.md  README_QUALITY_PLATFORM_SUMMARY.md  REPOSITORY_CLEANUP_COMPLETE.md  REPOSITORY_QUALITY_AUDIT_REPORT.md  SCIENTIFIC_GRADE_UPGRADE_PLAN.md  STS_MCOP_INTEGRATION_REPORT.md  analyze_readme_quality.py  complete_augmented_framework_fix.py  comprehensive_scientific_validation.py  detailed_readability_analysis.py  diagnostic_and_fix_augmented_validation.py  fix_landauer_compliance_and_optimize.py  flesch_100_analysis.py  flesch_100_scorer.py  perfect_100_examples.txt  pr_description.md  pr_description_final_readme_optimization.md  pr_description_readme_optimization.md  pyproject.toml  requirements.txt  setup.py  (+6 more)
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/wiki/: Home.md  What-is-STS.md
examples/: README.md  basic_neural_tracer.py  mcop_attribution.py
paper/: Makefile  SUBMISSION_GUIDE.md  main.tex  references.bib
readme_quality_platform/: .env.example  README_FINAL_100.md  README_MAX_SIMPLE.md  README_ORIGINAL_BACKUP.md  README_PERFECT.md  README_PERFECT_100.md  README_SIMPLE_100.md  README_ULTIMATE_100.md  README_ULTRA_100.md  README_ULTRA_SIMPLE.md  __init__.py  config.yaml  demo.py  demo_simple.py  demo_working.py  enhanced_analyzer.py  perfected_analyzer.py  pyproject.toml  readme_analyzer.py  requirements.txt  setup_platform.py  start_api.py  start_web.py  test_final.py  test_new_readme.py  test_perfect_100.py  test_ultimate.py  test_ultra_100.py  test_ultra_simple.py
readme_quality_platform/analyzers/: __init__.py  github.py
readme_quality_platform/api/: __init__.py  server.py
readme_quality_platform/cli/: __init__.py  main.py
readme_quality_platform/core/: __init__.py  analyzer.py  config.py  models.py
readme_quality_platform/github_actions/: Dockerfile  __init__.py  action.yml  entrypoint.sh
readme_quality_platform/github_actions/workflows/: readme-quality-check.yml
readme_quality_platform/metrics/: __init__.py  complexity.py  consistency.py  readability.py  structural.py
readme_quality_platform/tests/: __init__.py  test_readability.py
readme_quality_platform/web/: __init__.py  app.py
sensory_tracer_science/: README.md  __init__.py  sts_mcop_adapter.py  sts_validation_skill.py
sensory_tracer_science/core/: __init__.py  sts_constants.py  sts_equations.py
sensory_tracer_science/deployment/: __init__.py  cloud_deployment.py  container_orchestration.py  monitoring_analytics.py  production_config.py
sensory_tracer_science/docs/: FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_GUIDE.md  STS_THEORETICAL_FRAMEWORK.md
sensory_tracer_science/experimental/: __init__.py  advanced_experiments.py  clinical_trials.py  real_world_protocols.py
sensory_tracer_science/mcop_skills/: __init__.py  sts_validation_skill.py
sensory_tracer_science/tests/: __init__.py  test_complete_sts_framework.py
sensory_tracer_science/tools/: __init__.py  test_runner.py  validate.py
sensory_tracer_science/tracers/: __init__.py  biocompatible_neural.py  fiber_optic_brillouin.py  quantum_enhanced.py
sensory_tracer_science/validation/: __init__.py  sts_validator.py
tests/: __init__.py  fixtures.py  test_biocompatible_tracers.py  test_core_sts_constants.py  test_core_sts_equations.py  test_core_validation.py  test_deployment_cloud_deployment.py  test_deployment_comprehensive.py  test_deployment_container_orchestration.py  test_deployment_integration.py  test_deployment_monitoring_analytics.py  test_deployment_monitoring_production.py  test_deployment_production_config.py  test_experimental_advanced_experiments.py  test_experimental_clinical_trials.py  test_experimental_real_world_protocols.py  test_framework_basics.py  test_scientific_standards.py  test_sts_mcop_adapter.py  test_tools_test_runner.py  test_tools_test_runner_simple.py  test_tools_validate.py  test_tracers_biocompatible_neural.py  test_tracers_fiber_optic_brillouin.py  test_tracers_quantum_enhanced.py  test_validation_sts_validator.py
tools/: README.md  run_biocompatible_tests.py  validate_implementation.py
