[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-quality-platform"
version = "1.0.0"
description = "Comprehensive README Quality Assessment Platform - Multi-dimensional analysis toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "README Quality Platform Team" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    # Core analysis
    "textstat>=0.7.3",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "markdown>=3.5.1",
    "pygments>=2.16.1",
    
    # GitHub Integration
    "PyGithub>=1.59.1",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    
    # Web Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    
    # CLI
    "click>=8.1.7",
    "rich>=13.6.0",
    "typer>=0.9.0",
    
    # Data Processing
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "scikit-learn>=1.3.2",
    
    # Visualization
    "plotly>=5.17.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
]

llm = [
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "transformers>=4.35.2",
    "torch>=2.1.1",
]

[project.scripts]
readme-analyzer = "readme_quality_platform.cli.main:app"
readme-server = "readme_quality_platform.api.server:main"
readme-dashboard = "readme_quality_platform.web.app:main"

[project.urls]
Homepage = "https://github.com/readme-quality-platform/readme-quality-platform"
Documentation = "https://readme-quality-platform.readthedocs.io"
Repository = "https://github.com/readme-quality-platform/readme-quality-platform.git"
Issues = "https://github.com/readme-quality-platform/readme-quality-platform/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=readme_quality_platform --cov-report=term-missing"
testpaths = ["tests"]